# real-temperature-proxy-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yaml  nightly.yaml
docs/: decisions.md  open-meteo-response.json
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml.example  service.yaml
load-tests/: README.md  cache_test.lua  random_coords.lua
src/real_temperature_proxy_api/: __init__.py  app.py
src/real_temperature_proxy_api/api/: dependencies.py  health.py  routes.py
src/real_temperature_proxy_api/core/: __init__.py  cache.py  config.py
src/real_temperature_proxy_api/models/: weather.py
src/real_temperature_proxy_api/services/: openmeteo.py  weather.py
tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_integration.py  test_models.py
